# smt-kit

./: .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  generate_cka_benchmarks.sh  index.html  params.json
gtest/: configure.ac
gtest/autom4te.cache/: requests  traces.0
include/: bdd.h  cka.h  crv.h  nse_report.h  nse_sequential.h  smt  smt.h  smt_bdd.h  smt_cvc4.h  smt_deduce.h  smt_msat.h  smt_stp.h  smt_z3.h
solvers/: INSTALL_CVC4  INSTALL_MathSAT5  INSTALL_STP  INSTALL_Z3
src/: bdd.cpp  cka.cpp  crv.cpp  nse_sequential.cpp  smt.cpp
talks/: splash.html
talks/static/: slides.js
test/: CKA-benchmark.xml  DRD-benchmark.xml  cka_performance_test.cpp  cka_test.cpp  crv_functional_test.cpp  crv_performance_test.cpp  crv_test.cpp  nse_sequential_test.cpp  smt_bdd_test.cpp  smt_cvc4_test.cpp  smt_deduce_test.cpp  smt_functional_test.cpp  smt_msat_test.cpp  smt_stp_test.cpp  smt_test.cpp  smt_z3_test.cpp
